# crown_46_lab_accounting

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
verification/: verify_app.py  verify_app_force.py  verify_app_improved.py  verify_app_simple.py
