[project]
name = "eureka-accounting"
version = "0.1.0"
description = "CSV Data Processing Web Application for customer accounting data with automated filtering, grouping, and aggregation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]
